создал реактивную форму с валидацией для добавления покупателя

--- a/src/app/customers-host/customers-host.component.html
+++ b/src/app/customers-host/customers-host.component.html
@@ -1,1 +1,11 @@
-<p>customers-host works!</p>
+<div class="row">
+  <div class="col-12">
+    <crud-customers-list></crud-customers-list>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-5">
+    <crud-customer-details></crud-customer-details>
+  </div>
+</div>
