--- a/src/app/customers-host/customers-host.component.html
+++ b/src/app/customers-host/customers-host.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-12">
+  <div class="col-12 my-4">
     <crud-customers-list></crud-customers-list>
   </div>
 </div>
