--- a/src/app/customers-list/customers-list.component.html
+++ b/src/app/customers-list/customers-list.component.html
@@ -1,6 +1,21 @@
 <h2>Список покупателей</h2>
 
 <table class="table table-striped">
+
+  <ng-container *ngTemplateOutlet="theadBlock"></ng-container>
+
+  <tbody>
+  <tr *ngFor="let customer of customers$ | async let i = index">
+    <th class="align-middle" scope="row">{{ i + 1 }}</th>
+    <ng-container *ngTemplateOutlet="isEditPos === i ? thenBlock : elseBlock context: {$implicit: customer}"></ng-container>
+    <ng-container *ngTemplateOutlet="customerControlsBlock context: {customer: customer, index: i}"></ng-container>
+  </tr>
+  </tbody>
+</table>
+
+<!-------------------------------------------------------->
+
+<ng-template #theadBlock>
   <thead>
   <tr>
     <th scope="col">#</th>
@@ -8,15 +23,53 @@
     <th scope="col">Email</th>
     <th scope="col">Телефон</th>
     <th scope="col">Город</th>
+    <th scope="col">Управление</th>
   </tr>
   </thead>
-  <tbody>
-  <tr *ngFor="let customer of customers$ | async let i = index">
-    <th scope="row">{{ i + 1 }}</th>
-    <td>{{ customer.name }}</td>
-    <td>{{ customer.email }}</td>
-    <td>{{ customer.mobile }}</td>
-    <td>{{ customer.location }}</td>
-  </tr>
-  </tbody>
-</table>
+</ng-template>
+
+<ng-template #thenBlock let-customer>
+  <td class="align-middle">
+    <input #name (blur)="setValue('name', customer.name, name.value)" [value]="customer.name"
+           class="form-control form-control-sm" type="text">
+  </td>
+  <td class="align-middle">
+    <input #email (blur)="setValue('email', customer.email, email.value)" [value]="customer.email"
+           class="form-control form-control-sm" type="text">
+  </td>
+  <td class="align-middle">
+    <input #mobile (blur)="setValue('mobile', customer.mobile, mobile.value)" [value]="customer.mobile"
+           class="form-control form-control-sm" type="text">
+  </td>
+  <td class="align-middle">
+    <input #location (blur)="setValue('location', customer.location, location.value)" [value]="customer.location"
+           class="form-control form-control-sm" type="text">
+  </td>
+</ng-template>
+
+<ng-template #elseBlock let-customer>
+  <td class="align-middle">{{ customer.name }}</td>
+  <td class="align-middle">{{ customer.email }}</td>
+  <td class="align-middle">{{ customer.mobile }}</td>
+  <td class="align-middle">{{ customer.location }}</td>
+</ng-template>
+
+<ng-template #customerControlsBlock let-customer="customer" let-i="index">
+  <td class="align-middle controls">
+    <button
+      (click)="editCustomer(i)"
+      *ngIf="isEditPos !== i"
+      class="btn btn-info btn-sm ms-2" type="button"><i class="fas fa-edit"></i></button>
+    <button
+      (click)="cancelEdit()"
+      *ngIf="isEditPos === i"
+      class="btn btn-info btn-sm ms-2" type="button"><i class="fas fa-undo"></i></button>
+    <button
+      (click)="saveCustomer(customer, i)" *ngIf="isEditPos === i"
+      [disabled]="isNotChanged"
+      class="btn btn-info btn-sm ms-2" type="button"><i class="fas fa-save"></i></button>
+    <button
+      (click)="deleteCustomer(customer, i)"
+      class="btn btn-info btn-sm ms-2" type="button"><i class="fas fa-trash"></i></button>
+  </td>
+</ng-template>
